manual/easy-gifts/overlays/dev/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: easy-gifts
  namespace: easy-gifts
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dev.american-broomstick.com
    secretName: easy-gift-tls
  rules:
    - host: dev.american-broomstick.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eg-website-static
                port:
                  number: 80
    - host: dev.american-broomstick.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eg-website-api
                port:
                  number: 8080
